
Serialization compatible - Yes

Data compatible - Yes, except
  - DateTimeZone data updated to version 2008e

Semantic compatible - Yes


Deprecations since 1.5
----------------------


Bug fixes since 1.5
-------------------
- ISODateTimeFormat millisecond parsing broken
  Millisecond parsing would parse 12:00:00.4 as 4 milliseconds rather
  than 400 milliseconds

- ISODateTimeFormat basic field parsing too lenient
  The basic parsers in ISODateTimeFormat were too lenient
  They have been changed to only accept the correct number of digits as
  per the ISO-8601 standard. The non basic parsers are unaffected

- DateTimeFormat.forFields(List) method can't handle immutable [1877843]
  Fix so that the method does not throw an exception when an unmodifiable
  list is passed in

- Fixed offset time zones calculated incorrect periods
  ZonedChronology.ZonedDuration.isPrecise() did not take into account
  the decorated isPrecise() value. This meant that date fields for fixed
  offset time zones were always considered precise. The result was periods
  containing months and years when they should not have done.

- ZonedChronology (regression from 1.4) [1887104]
  Fix to roundFloor/roundCeiling
  Bug affected DST cutover in Autumn for time fields (not date fields)
  
- Clarify Javadoc time zone formats
  Time zone formats were incorrectly documented as 'Z' instead of 'ZZ'
  Javadoc only change

- DateTimeZone (regression from 1.4) [fix also available in v1.5.2]
  Fix getOffsetFromLocal DST gap adjustment
  Bug affected parsing of DST cutover in Autumn

- Parsing (regression from 1.4) [1839440] [fix also available in v1.5.1]
  Support parsing all upper-case and all lower-case text

- Javadoc clarity enhancements [fix also available in v1.5.1]
  - Constants in Years/Months/Weeks/Days/Hours/Minutes/Seconds etc.
  - Period/Interval Object constructors


Feedback
--------
All feedback is welcomed via the joda-interest mailing list.

The Joda team
http://joda-time.sourceforge.net